feat: 联调，加上gitignore

--- a/pages/company-detail/company-detail.wxml
+++ b/pages/company-detail/company-detail.wxml
@@ -95,5 +95,5 @@
 
 
 </view>
-<import src="../tabbar/tabbar.wxml"/>
-<template is="tabbar" data="{{tabbar}}"/>
+<!--<import src="../tabbar/tabbar.wxml"/>
+<template is="tabbar" data="{{tabbar}}"/>-->
