--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,7 @@
 /**app.wxss**/
+page {
+  font-size: 38rpx;
+}
 .container {
   height: 100%;
   display: flex;
@@ -25,7 +28,10 @@
   width: 100%;
 }
 .border-tope9 {
-  border-top:1px solid #e9e9e9;
+  border-top:1px solid #e9e9e9 !important;
+}
+.border-bottom9 {
+  border-bottom:1px solid #e9e9e9;
 }
 .mart20 {
   margin-top: 20rpx;
@@ -57,15 +63,24 @@
   line-height: 100rpx;
   background: #5082f0;
   color: #fff;
-  font-size: 15pt;
+  font-size: 38rpx;
+  text-align: center;
+}
+.green-button {
+  width: 100%;
+  height: 100rpx;
+  line-height: 100rpx;
+  background: #09bb07;
+  color: #fff;
+  font-size: 40rpx;
   text-align: center;
 }
 /*公司*/
 .pro-company-name {
   width:100%;
   height: 120rpx;
-  line-height: 120rpx;
-  font-size: 14pt;
+  display: table;
+  font-size: 40rpx;
   background:#fff;
   overflow: hidden;
 }
@@ -80,7 +95,8 @@
   width: 50%;
   height: 110rpx;
   line-height:110rpx;
-  font-size: 13pt;
+  font-size: 32rpx;
+  
   float: left;
   background: #fff;
   text-align: center;
@@ -89,6 +105,7 @@
 .pro-detial-mess {
   margin-top: 30rpx;
   background:#fff;
+  font-size: 34rpx;
 }
 .pro-detial-mess-tit {
   height: 86rpx;
@@ -109,28 +126,30 @@
   border-bottom:2px solid #5082f0;
 }
 .pro-detial-mess-row {
-  height: 100rpx;
-  line-height: 100rpx;
+  min-height: 100rpx;
+  line-height: 46rpx;
   border-top:1px solid #e9e9e9;
   position: relative;
-  font-size: 12pt;
+  font-size: 32rpx;
 }
 .pro-detial-mess-row:first-child {
   border-top:none;
 }
 .pro-detial-mess-row .messlable {
   width: 300rpx;
-  height: 100rpx;
+  min-height: 46rpx;
+  padding: 27rpx 0rpx;
   color: #999999;
   float: left;
   overflow: hidden;
 }
 .pro-detial-mess-row .messcon {
   width: 350rpx;
-  height: 100rpx;
+  min-height: 46rpx;
   float: left;
   overflow: hidden;
   text-indent: 20rpx;
+  padding: 27rpx 0rpx;
   color: #333;
 }
 .pro-detial-mess-row .mess-iconaa {
@@ -142,7 +161,8 @@
 
 .pro-detial-mess-row .pro-duty-aa {
   width: 48rpx;
-  height: 100rpx;
+  min-height:46rpx;
+  padding: 27rpx 0rpx;
   float: left;
   text-align:left;
 }
@@ -152,13 +172,21 @@
 }
 .pro-detial-mess-row .pro-duty-bb {
   width:295rpx;
-  height:100rpx;
+  min-height:46rpx;
+  padding: 27rpx 0rpx;
   color:#333;
   float: left;
 }
+.pro-detial-mess-row .pro-duty-bb.cost {
+  width:400rpx;
+}
+.pro-detial-mess-row .pro-duty-dd.cost {
+  width:230rpx;
+}
 .pro-detial-mess-row .pro-duty-cc {
   width:315rpx;
-  height:100rpx;
+  min-height:46rpx;
+  padding: 27rpx 0rpx;
   color:#999999;
   padding-right:25rpx;
   background-image:url(https://wenme.cc/static/images/gopage-icon.png);
@@ -170,7 +198,8 @@
 }
 .pro-detial-mess-row .pro-duty-dd {
   width:315rpx;
-  height:100rpx;
+  min-height:46rpx;
+  padding: 27rpx 0rpx;
   color:#999999;
   padding-right:25rpx;
   background-repeat: no-repeat;
@@ -178,6 +207,15 @@
   background-size:12rpx 20rpx;
   text-align:right;
   float: right;
+}
+.pro-detial-mess-row .pro-duty-ee {
+  min-height:46rpx;
+  padding: 27rpx 0rpx;
+  padding-right:25rpx;
+  background-image:url(https://wenme.cc/static/images/gopage-icon.png);
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size:12rpx 20rpx;
 }
 .padding-bot20 {
   padding-bottom: 20rpx;
@@ -199,4 +237,62 @@
 }
 .margin-top120 {
   margin-top: 118rpx;
+}
+.margin-top150 {
+  margin-top: 148rpx;
+}
+.blue {
+  color: #7ea0f0;
+}
+.red {
+  color: #f05050 !important;
+}
+/*价格*/
+.pro-price {
+  padding: 20rpx 0rpx;
+  height: 100rpx;
+  line-height:100rpx;
+  font-size: 32rpx;
+}
+.pro-price .lefpric {
+  width: 50%;
+  float: left;
+  color:#999999;
+}
+.pro-price .lefpric text.span {
+  padding-left: 10rpx;
+  color:#f05050;
+  font-size:58rpx;
+}
+.pro-price .agreement {
+  width: 50%;
+  float: right;
+  color:#4682f0;
+  text-align: right;
+}
+.pro-price .agreement .go-icon {
+  width: 25rpx;
+  height: 100rpx;
+  float: right;
+  text-align:left;
+  padding-left: 10rpx;
+}
+.pro-price .agreement .go-icon image {
+  width: 12rpx;
+  height: 20rpx;
+}
+.bottom-fix {
+  height: 110rpx;
+  position: fixed;
+  z-index: 999;
+  left: 0rpx;
+  bottom:0rpx;
+}
+.padding-bottom {
+  padding-bottom: 140rpx;
+}
+.productname {
+  display: table-cell;
+  vertical-align: middle;
+  line-height: 50rpx;
 }
