--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -10,10 +10,10 @@
   width: 100%;
   height:112rpx;
   line-height:112rpx;
-  font-size: 14pt;
+  font-size: 40rpx;
   color: #fff;
   text-align: center;
-  margin-top:44rpx;
+  margin-top:48rpx;
   border:1px solid #5082f0;
   background: #5082f0;
   border-radius:0rpx;
