--- a/pages/product-grade/product-grade.wxss
+++ b/pages/product-grade/product-grade.wxss
@@ -1,7 +1,6 @@
 /* pages/product-grade/product-grade.wxss */
 page {
-    background-color: #f5f6f8;
-    font-size: 13pt;
+  background:#f5f6f8;
 }
 .comp-grade-chose {
   width: 50%;
@@ -10,6 +9,7 @@ page {
   float: left;
   background: #fff;
   text-align: center;
+  font-size: 32rpx;
 }
 .comp-grade-chose.left {
   height: 110rpx;
@@ -40,14 +40,23 @@ page {
 }
 
 .company-info-row {
-	height:80rpx;
-	line-height:80rpx;
-	font-size: 12pt;
+	min-height:54rpx;
+	line-height:54rpx;
+	font-size: 34rpx;
+  padding: 17rpx 0rpx;
 }
 .company-info-row .gradeable {
 	width: 220rpx;
 	float: left;
 	color: #aaaaaa;
+}
+.company-info-row .fullline {
+	width: 100%;
+  color: #aaaaaa;
+}
+.company-info-row .fullline text.span {
+  padding-left: 20rpx;
+  color: #555;
 }
 .company-info-row .gradecon {
 	width: 350rpx;
@@ -63,4 +72,58 @@ page {
 	position:absolute;
 	right:0rpx;
 	top:22rpx;
+}
+.company-info-row.title {
+  font-size: 38rpx;
+  color: #000;
+}
+.company-info-row .gradecon.txt {
+  color: #000;
+}
+.prograde-contxt {
+  padding:30rpx;
+  line-height: 30rpx;
+  font-size: 34rpx;
+  word-break: break-all;
+  color: #555555;
+}
+.prograde-contxt text {
+  line-height: 40rpx;
+  display: block;
+}
+.prograde-contxt text.blue {
+  line-height: 60rpx;
+}
+/*表格*/
+.grade-table {
+  border-bottom:1px solid #e9e9e9;
+}
+.grade-table .th .thd {
+  width:33.33%;
+  height: 88rpx;
+  line-height: 88rpx;
+  text-align: left;
+  color: #999999;
+  float: left;
+}
+.grade-table .tr {
+  height: 100rpx;
+  overflow: hidden;
+  border-top: 1px solid #f0f0f0;
+}
+.grade-table .tr .td {
+  width:33.33%;
+  height: 100rpx;
+  line-height: 100rpx;
+  float: left;
+  
+  margin-left: -1px;
+  text-align: left;
+  color: #999999;
+}
+.grade-table .tr .td.title.long {
+  width: 66.66%;
+}
+.grade-table .tr .td.title {
+  color: #333333;
 }
