--- a/pages/prograde-baoxianzeren/prograde-baoxianzeren.wxml
+++ b/pages/prograde-baoxianzeren/prograde-baoxianzeren.wxml
@@ -55,37 +55,23 @@
         <view class="padd-lr-30">
 
             <view wx:for="{{important_info_arr}}" class="pro-detial-mess-row">
-                <view class="pro-duty-bb">重大疾病种数</view>
-                <view class="pro-duty-cc">50种</view>
+                <view class="pro-duty-bb">{{item[0]}}</view>
+                <view class="pro-duty-cc" wx:if="{{item[0]==='重大疾病种数' || item[0]==='轻度重疾种数'}}">{{item[1]}}种</view>
+                <view class="pro-duty-cc" wx:if="{{item[0]==='重疾赔付次数'}}">{{item[1]}}次</view>
+                <view class="pro-duty-cc" wx:if="{{item[0]==='轻疾赔付比例'}}">{{item[1]*100}}%</view>
             </view>
 
-            <view class="pro-detial-mess-row">
-                <view class="pro-duty-bb">轻度重疾种数</view>
-                <view class="pro-duty-cc">20种</view>
-            </view>
-
-            <view class="pro-detial-mess-row">
-                <view class="pro-duty-bb">重疾赔付次数</view>
-                <view class="pro-duty-dd">5次</view>
-            </view>
-
-            <view class="pro-detial-mess-row">
-                <view class="pro-duty-bb">轻疾赔付比例</view>
-                <view class="pro-duty-dd">20%</view>
-            </view>
-
-            
-        <view class="clear"></view>
+            <view class="clear"></view>
         </view>
 
-    <view class="clear"></view>
+        <view class="clear"></view>
     </view>
 
 
 
     <view class="wrap border-tope9 bottom-fix">
 			<view class="comp-grade-chose left">
-				专业客服
+				<contact-button type="default-light">专业客服</contact-button>
 				<view class="lineaa"></view>
 			</view>
 			<view class="comp-grade-chose right">发现错误</view>
