--- a/pages/prograde-wanneng/prograde-wanneng.wxml
+++ b/pages/prograde-wanneng/prograde-wanneng.wxml
@@ -1,16 +1,16 @@
 <!--pages/prograde-wanneng/prograde-wanneng.wxml-->
 <view class="padding-bottom">
-<view class="pro-company-name posi-fixed-top"><view class="productname padd-lr-30" >工银安盛人寿鑫如意终身寿险</view></view>
+<view class="pro-company-name posi-fixed-top"><view class="productname padd-lr-30" >{{product}}</view></view>
     <view class="part-white padd-lr-30 padding-bot20 margin-top120">
 		
         <view class="company-info-row posi-rela">
-            <view class="fullline">2017年3月结算利率<text class="span">4.3%</text></view>
+            <view class="fullline">{{credit_month}}结算利率<text class="span">{{credit_rate}}%</text></view>
         </view>
         <view class="company-info-row posi-rela">
-            <view class="fullline">产品疾病评分<text class="span red">226分</text></view>
+            <view class="fullline">{{module_score_str}}<text class="span red">{{module_score}}分</text></view>
         </view>
         <view class="company-info-row posi-rela">
-            <view class="fullline">投资功能排名<text class="span">34名，总计245个产品
+            <view class="fullline">{{module_ranking_str}}<text class="span">{{module_ranking}}名，总计{{module_product_count}}个产品
 </text></view>
         </view>
 		
@@ -48,21 +48,21 @@
             <view class="pro-detial-mess-row">
                 <view class="pro-duty-bb cost">3年平均收益率
 </view>
-                <view class="pro-duty-dd cost">4.1%</view>
+                <view class="pro-duty-dd cost">{{avg_credit_rate_3y}}%</view>
                 <view class="clear"></view>
             </view>
 
             <view class="pro-detial-mess-row">
                 <view class="pro-duty-bb cost">3年平均波动率
 </view>
-                <view class="pro-duty-dd cost">0.3%</view>
+                <view class="pro-duty-dd cost">{{volatile_credit_rate_3y}}%</view>
                 <view class="clear"></view>
             </view>
 
             <view class="pro-detial-mess-row">
                 <view class="pro-duty-bb cost">最近1年收益率
 </view>
-                <view class="pro-duty-dd cost">4.0%
+                <view class="pro-duty-dd cost">{{last_year_credit_rate}}%
 </view>
 <view class="clear"></view>
             </view>
@@ -70,7 +70,7 @@
             <view class="pro-detial-mess-row">
                 <view class="pro-duty-bb cost">最低保证利率
 </view>
-                <view class="pro-duty-dd cost">1.8%
+                <view class="pro-duty-dd cost">{{min_credit_rate}}%
 </view>
 <view class="clear"></view>
             </view>
@@ -92,19 +92,19 @@
 
             <view class="pro-detial-mess-row">
                 <view class="pro-duty-bb cost">初始费用</view>
-                <view class="pro-duty-dd cost">0.8%</view>
+                <view class="pro-duty-dd cost">{{initial_fee}}%</view>
                 <view class="clear"></view>
             </view>
 
             <view class="pro-detial-mess-row">
                 <view class="pro-duty-bb cost">头5年平均退保费用</view>
-                <view class="pro-duty-dd cost">3.1%</view>
+                <view class="pro-duty-dd cost">{{avg_surrender_charge_f5y}}%</view>
                 <view class="clear"></view>
             </view>
 
             <view class="pro-detial-mess-row">
                 <view class="pro-duty-bb cost">无费用退保年期</view>
-                <view class="pro-duty-dd cost">第4年</view>
+                <view class="pro-duty-dd cost">{{no_charge_surrender_year}}</view>
                 <view class="clear"></view>
             </view>
 
@@ -117,7 +117,7 @@
 
 <view class="wrap border-tope9 bottom-fix">
 			<view class="comp-grade-chose left">
-				专业客服
+				<contact-button type="default-light">专业客服</contact-button>
 				<view class="lineaa"></view>
 			</view>
 			<view class="comp-grade-chose right">发现错误</view>
