--- a/pages/prograde-touzitoulian/prograde-touzitoulian.wxml
+++ b/pages/prograde-touzitoulian/prograde-touzitoulian.wxml
@@ -22,7 +22,7 @@
         </view>
 
         <view class="prograde-contxt">
-            <canvas style="width: 300px; height: 200px;" canvas-id="firstCanvas"></canvas>
+            <canvas style="width: 300px; height: 200px;" canvas-id="touzijiazhi"></canvas>
         <view class="clear"></view>
         </view>
 
