--- a/pages/product-list/product-list.wxml
+++ b/pages/product-list/product-list.wxml
@@ -2,7 +2,7 @@
 <view>
     <view class="part-white pro-detial-mess-row border-bottomf568 posi-fixed-top">
         <view class="padd-lr-30">
-        <view class="pro-duty-bb">共有365个匹配产品</view>
+        <view class="pro-duty-bb">共有{{total_product_count}}个匹配产品</view>
         <view class="pro-duty-cc blue">产品筛选</view>
         <view class="clear"></view>
         </view>
@@ -11,89 +11,16 @@
     <view class="pro-detial-mess padd-lr-30 margin-top120">
 
 
-        <view class="product-item">
-            <view class="product-item-tit">工银安盛人寿保鑫如终身寿险</view>
+        <view class="product-item" wx:for="{{product_list}}" data-pid="{{item.pid}}" bindtap="toDetail">
+            <view class="product-item-tit">{{item.product}}</view>
             <view class="product-item-con">
-                <view class="type type-aa">简单</view>
-                <view class="span-item">工银安盛人寿</view>
-            <view class="clear"></view>
+                <view class="type type-bb">{{item.complexity}}</view>
+                <view class="span-item">{{item.insurer_abbreviation}}</view>
+                <view class="span-item">{{item.product_class}}</view>
+                <view class="clear"></view>
             </view>
         </view>
-
-        <view class="product-item">
-            <view class="product-item-tit">工银安盛人寿保鑫如终身寿险</view>
-            <view class="product-item-con">
-                <view class="type type-bb">中等</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-            <view class="clear"></view>
-            </view>
-        </view>
-
-        <view class="product-item">
-            <view class="product-item-tit">工银安盛人寿保鑫如终身寿险</view>
-            <view class="product-item-con">
-                <view class="type type-cc">复杂</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-            <view class="clear"></view>
-            </view>
-        </view>
-
-        <view class="product-item">
-            <view class="product-item-tit">工银安盛人寿保鑫如终身寿险</view>
-            <view class="product-item-con">
-                <view class="type type-cc">复杂</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-            <view class="clear"></view>
-            </view>
-        </view>
-
-        <view class="product-item">
-            <view class="product-item-tit">工银安盛人寿保鑫如终身寿险</view>
-            <view class="product-item-con">
-                <view class="type type-cc">复杂</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-            <view class="clear"></view>
-            </view>
-        </view>
-
-        <view class="product-item">
-            <view class="product-item-tit">工银安盛人寿保鑫如终身寿险</view>
-            <view class="product-item-con">
-                <view class="type type-cc">复杂</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-            <view class="clear"></view>
-            </view>
-        </view>
-
-        <view class="product-item">
-            <view class="product-item-tit">工银安盛人寿保鑫如终身寿险</view>
-            <view class="product-item-con">
-                <view class="type type-cc">复杂</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-                <view class="span-item">工银安盛人寿</view>
-                <view class="span-item">终身寿险</view>
-            <view class="clear"></view>
-            </view>
-        </view>
-
-
-    <view class="clear"></view>
+        <view class="clear"></view>
     </view>
 
 </view>
