--- a/pages/start-page/start-page.wxml
+++ b/pages/start-page/start-page.wxml
@@ -2,13 +2,13 @@
 <swiper indicatorDots autoplay="{{autoplay}}" class="width-100">
   <block>
     <swiper-item>
-      <image src="../../images/start-a.jpg" mode="widthFix" bindtap="swipclick"/>
+      <image src="https://wenme.cc/static/images/start-a.jpg" mode="widthFix" bindtap="swipclick"/>
     </swiper-item>
     <swiper-item>
-      <image src="../../images/start-b.jpg" mode="widthFix" bindtap="swipclick"/>
+      <image src="https://wenme.cc/static/images/start-b.jpg" mode="widthFix" bindtap="swipclick"/>
     </swiper-item>
     <swiper-item>
-      <image src="../../images/start-c.jpg" mode="widthFix" bindtap="swipclick"/>
+      <image src="https://wenme.cc/static/images/start-c.jpg" mode="widthFix" bindtap="swipclick"/>
     </swiper-item>
   </block>
 </swiper>
