--- a/pages/product-list/product-list.wxss
+++ b/pages/product-list/product-list.wxss
@@ -1,2 +1,2 @@
 /* pages/product-list/product-list.wxss */
-@import "../../pages/product-grade/product-grade.wxss"
+@import "../../pages/product-grade/product-grade.wxss";
